fixing spacing

--- a/src/index.css
+++ b/src/index.css
@@ -740,22 +740,6 @@ font-size: 16px;
 /* -------SEMI-PRIVATE--------- */
 /* -------RELATED--------- */
 /* -------STYLES--------- */
-/* .semiPrivate {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 0;
-  margin: 0;
-  
-
-}
-
-.semiPrivate {
-  border: 2px var(--borderColor) solid;
-  padding: 0.5em;
-  flex-grow: 1;
-  margin-right: 0.25em;
-} */
 
 .semiPrivate h5 {
   background: var(--semiPrivate);
@@ -871,14 +855,16 @@ font-size: 16px;
 .lesson-info {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   margin: 0;
   margin-left: 0.25rem;
   margin-right: 0.25rem;
-  margin-bottom: 0.5rem;
   line-height: 1.5;
   letter-spacing: 0.5px;
   font-size: 0.9rem;
+}
+
+.lesson-info > * {
+  margin-bottom: 0.5em;
 }
 
 
